# te

./: Cargo.toml  LICENSE  README.md
docs/: TODO-keybindings.md
src/: app.rs  cli.rs  command.rs  command_parser.rs  editor.rs  history.rs  main.rs  shell.rs  tui.rs  undo.rs  wrap_text.rs
