[package]
name = "te-cli"
version = "0.1.2"
edition = "2024"
description = "Interactive TUI wrapper for CLI commands - Your helping hand for command-line interfaces"
license = "MIT"
repository = "https://github.com/yusukeshib/te"
readme = "README.md"
keywords = ["cli", "tui", "wrapper", "interactive", "terminal"]
categories = ["command-line-utilities", "command-line-interface"]
authors = ["Yusuke Shibata"]

[[bin]]
name = "te"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["use-dev-tty"] }
anyhow = "1.0"
shlex = "1.3"
unicode-width = "0.2.0"
